# bootcamp-python-dio

./: app.py
Atributos-Classe-Instancia/: atributos-classe-instancia.py  classes-abstratas.py  metodos-classe-estatico.py
Banco de Dados/: dbapi.py  injecao_sql.py  meu_banco.db  transacao.py
Data-Hora-Fuso/: 1_datetime.py  2_timedelta.py  3_strftime_strptime.py  4_pytz.py  5_timezone.py
Decoradores, Iteradores e Geradores/: decorador_com_argumentos.py  decorador_introspeccao.py  decorador_return_func_decorada.py  funcao_interna.py  geradores.py  iteradores.py  passagem_param.py  primeiro_decorador.py  primeiro_decorador_acucar_sintax.py  retorna_funcao.py
Encapsulamento/: encapsulamento.py
Gerenciamento-de-Pacotes/: boas_praticas.py
Heranca/: heranca_multipla.py  heranca_simples.py
Manipulação de Arquivos/: _csv.py  boas_praticas.py  dados.csv  desafio_v2.py  log.txt  operation_read.py  operation_write.py  os_shutil.py  test.txt  tratamento_erro.py
Polimorfismo/: polimorfismo.py
Propriedades/: propriedades.py
desafio-sistema-bancario-POO/: app.py
desafio-sistema-bancario-v2.0/: app.py
tdd-project/: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
tdd-project/store/controllers/: product.py
tdd-project/store/core/: exceptions.py
tdd-project/store/schemas/: base.py  product.py
tdd-project/store/usecases/: product.py
tdd-project/tests/: conftest.py  factories.py
tdd-project/tests/controllers/: test_product.py
tdd-project/tests/schemas/: test_product.py
tdd-project/tests/usecases/: test_product.py
(+31 files in other folders)
